--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -15,32 +15,32 @@ const leftmenu: Menu[] = [
     label: "Home",
     href: "/",
   },
-  {
-    label: "About",
-    href: "/about",
-  },
-  {
-    label: "Contact",
-    href: "/contact",
-  },
+  // {
+  //   label: "About",
+  //   href: "/about",
+  // },
+  // {
+  //   label: "Contact",
+  //   href: "/contact",
+  // },
 ];
 
 const rightmenu: Menu[] = [
-  {
-    label: "Archive",
-    href: "/archive",
-  },
-  {
-    label: "Github",
-    href: "https://github.com/web3templates/stablo-astro",
-    external: true,
-    badge: "new",
-  },
-  {
-    label: "Download",
-    href: "https://web3templates.com/templates/stablo-minimal-blog-website-template",
-    external: true,
-  },
+  // {
+  //   label: "Archive",
+  //   href: "/archive",
+  // },
+  // {
+  //   label: "Github",
+  //   href: "https://github.com/web3templates/stablo-astro",
+  //   external: true,
+  //   badge: "new",
+  // },
+  // {
+  //   label: "Download",
+  //   href: "https://web3templates.com/templates/stablo-minimal-blog-website-template",
+  //   external: true,
+  // },
 ];
 
 const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
