--- a/src/components/authorcard.astro
+++ b/src/components/authorcard.astro
@@ -24,7 +24,7 @@ const { author } = Astro.props;
     <div>
       <div>
         <p class="text-lg font-medium text-gray-800 dark:text-gray-300">
-          About {author.name}
+          Acerca de {author.name}
         </p>
       </div>
       <div class="mt-3">
