--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -15,10 +15,10 @@ const leftmenu: Menu[] = [
     label: "Home",
     href: "/",
   },
-  // {
-  //   label: "About",
-  //   href: "/about",
-  // },
+  {
+    label: "Acerca de",
+    href: "/about",
+  },
   // {
   //   label: "Contact",
   //   href: "/contact",
