--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,8 +10,8 @@ import Link from "@components/ui/link.astro";
 <Layout title="About">
   <Container>
     <Pagetitle>
-      <Fragment slot="title">About</Fragment>
-      <Fragment slot="desc">We are a small passionate team.</Fragment>
+      <Fragment slot="title">Acerca de</Fragment>
+      <Fragment slot="desc">Hola dev 😎, permitenos presentarnos.</Fragment>
     </Pagetitle>
 
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
@@ -37,14 +37,24 @@ import Link from "@components/ui/link.astro";
       }
     </div>
 
-    <div class="mx-auto max-w-xl text-center mt-14">
+    <div class="mx-auto max-w-xl text-justify mt-14">
       <p class="text-lg leading-relaxed text-gray-600">
-        We're a multi-cultural team from around the world! We come from diverse
-        backgrounds, bringing different personalities, experiences and skills to
-        the job. This is what makes our team so special.
+       Somos un pequeño equipo de personas apasionadas por la programación y la enseñanza. Nos encanta compartir nuestros conocimientos y habilidades con otros y ayudarles a aprender a programar. <br><br>
+
+Somos expertos autodidactas en la construcción de aplicaciones web, hemos trabajado en varios proyectos y tenemos experiencia en diferentes lenguajes de programación y tecnologías web.<br><br>
+
+Nuestro objetivo principal es ayudar a las personas que desean convertirse en programadores y no saben por dónde empezar. Queremos hacer de la programación una disciplina accesible y atractiva para todos.<br><br>
+
+Por medio de nuestro blog, compartimos nuestros conocimientos y experiencias de manera clara y sencilla, explicando los conceptos fundamentales de la programación y brindando recursos útiles para que los estudiantes puedan avanzar en su aprendizaje.<br><br>
+
+Creemos en la importancia de aprender haciendo, por lo que proporcionamos ejemplos y desafíos prácticos para que los lectores puedan aplicar lo que han aprendido en la vida real. Además, estamos siempre disponibles para responder preguntas y brindar apoyo a través de nuestras redes sociales y correo electrónico.<br><br>
+
+Nos encanta enseñar programación y ver cómo los estudiantes se sienten cada vez más seguros y competentes en su aprendizaje. Esperamos poder ayudar a muchos más estudiantes a través de nuestro blog y seguir contribuyendo al mundo de la programación.<br><br>
+
+Únete a nosotros en este viaje hacia una carrera exitosa y satisfactoria en la programación. ¡Estamos emocionados de ver tu crecimiento y logros!
       </p>
-      <div class="mt-8">
-        <Link href="/contact" style="primary">Get in touch</Link>
+      <div class="mt-8 text-center">
+        <Link href="/contact" style="primary">Contáctanos</Link>
       </div>
     </div>
   </Container>
