--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -124,7 +124,7 @@ const category = categories.find(
         <a
           href="/"
           class="px-5 py-3 text-sm text-blue-600 transition rounded-md dark:text-blue-500 bg-blue-50 hover:bg-blue-100">
-          ← View all posts
+          ← Ver todos los Posts
         </a>
       </div>
       {author && <Authorcard author={author} />}
