--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -19,17 +19,17 @@ const leftmenu: Menu[] = [
     label: "Acerca de",
     href: "/about",
   },
-  // {
-  //   label: "Contact",
-  //   href: "/contact",
-  // },
 ];
 
 const rightmenu: Menu[] = [
-  // {
-  //   label: "Archive",
-  //   href: "/archive",
-  // },
+  {
+    label: "Contacto",
+    href: "/contact",
+  },
+  {
+    label: "Archive",
+    href: "/archive",
+  },
   // {
   //   label: "Github",
   //   href: "https://github.com/web3templates/stablo-astro",
