--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -16,26 +16,26 @@ import Button from "@components/ui/button.astro";
   <div class="mb-5">
     <input
       type="text"
-      placeholder="Full Name"
+      placeholder="Nombre Completo"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
       name="name"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please provide your full name.
+      Porfavor escriba su nombre.
     </div>
   </div>
   <div class="mb-5">
     <label for="email_address" class="sr-only">Email Address</label><input
       id="email_address"
       type="email"
-      placeholder="Email Address"
+      placeholder="Correo Electrónico"
       name="email"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     />
     <div class="empty-feedback text-red-400 text-sm mt-1">
-      Please provide your email address.
+      Porfavor escriba su correo electrónico.
     </div>
     <div class="invalid-feedback text-red-400 text-sm mt-1">
       Please provide a valid email address.
@@ -45,14 +45,14 @@ import Button from "@components/ui/button.astro";
     <textarea
       name="message"
       required
-      placeholder="Your Message"
+      placeholder="Escríbenos tus dudas"
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please enter your message.
+      Porfavor escribanos un mensaje.
     </div>
   </div>
-  <Button type="submit" size="lg" block>Send Message</Button>
+  <Button type="submit" size="lg" block>Enviar Mensaje</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 
