--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,31 +6,31 @@ import Contactform from "@components/contactform.astro";
 import Pagetitle from "@components/pagetitle.astro";
 ---
 
-<Layout title="Contact">
+<Layout title="Contacto">
   <Container>
     <Pagetitle>
-      <Fragment slot="title">Contact</Fragment>
-      <Fragment slot="desc">We are a here to help.</Fragment>
+      <Fragment slot="title">Contacto</Fragment>
+      <Fragment slot="desc">Estamos aquí para ayudarte.</Fragment>
     </Pagetitle>
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Stablo</h2>
+        <h2 class="font-medium text-2xl text-gray-800">Contáctanos</h2>
         <p class="text-lg leading-relaxed text-gray-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          ¿Necesitas ayuda? Estamos aquí para ayudarte.
+          Llena el formulario, envíanos un correo electrónico o escríbenos en el chat.
         </p>
         <div class="mt-5">
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
+            <span>Bogotá DC, Colombia.</span>
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@stablotemplate.com">hello@stablotemplate.com</a
+              href="mailto:hello@stablotemplate.com">unsimpleprogramador.blog@gmail.com</a
             >
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
+              href="tel:+1 (987) 4587 899">+57 300 123 4567</a
             >
           </div>
         </div>
