--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -27,7 +27,7 @@ const rightmenu: Menu[] = [
     href: "/contact",
   },
   {
-    label: "Archive",
+    label: "Archivos",
     href: "/archive",
   },
   // {
