--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -15,8 +15,8 @@ import { latestPosts } from "@utils/content";
 <Layout title="Archive">
   <Container>
     <Pagetitle>
-      <Fragment slot="title">Archive</Fragment>
-      <Fragment slot="desc">See all posts we have ever written.</Fragment>
+      <Fragment slot="title">Archivos</Fragment>
+      <Fragment slot="desc">Todos los posts que hemos escrito. 😎</Fragment>
     </Pagetitle>
     <main>
       <div class="grid gap-10 mt-10 lg:gap-10 md:grid-cols-2 xl:grid-cols-3">
