--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,11 +6,11 @@ import Contactform from "@components/contactform.astro";
 import Pagetitle from "@components/pagetitle.astro";
 ---
 
-<Layout title="Contacto">
+<Layout title="Contact">
   <Container>
     <Pagetitle>
       <Fragment slot="title">Contacto</Fragment>
-      <Fragment slot="desc">Estamos aquí para ayudarte.</Fragment>
+      <Fragment slot="desc">Estamos aquí para ayudarte. 🤜🤛</Fragment>
     </Pagetitle>
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
