About en construcción

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,10 +11,10 @@ import Link from "@components/ui/link.astro";
   <Container>
     <Pagetitle>
       <Fragment slot="title">Acerca de</Fragment>
-      <Fragment slot="desc">Hola dev 😎, permitenos presentarnos.</Fragment>
+      <Fragment slot="desc">Hola dev 😎 <br> Esta pagina está en construcción, pronto la habilitaremos.</Fragment>
     </Pagetitle>
 
-    <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
+    <!-- <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-1">
       {
         authors.slice(0, 3).map((item) => (
           <div class="group">
@@ -24,7 +24,7 @@ import Link from "@components/ui/link.astro";
                 format="avif"
                 width={580}
                 height={580}
-                alt="Team"
+                alt="Imagen de Carlos Fajardo"
                 class="w-full h-full object-cover rounded transition  group-hover:-translate-y-1 group-hover:shadow-xl"
               />
             </div>
@@ -35,9 +35,9 @@ import Link from "@components/ui/link.astro";
           </div>
         ))
       }
-    </div>
+    </div> -->
 
-    <div class="mx-auto max-w-xl text-justify mt-14">
+    <!-- <div class="mx-auto max-w-xl text-justify mt-14">
       <p class="text-lg leading-relaxed text-gray-600">
        Somos un pequeño equipo de personas apasionadas por la programación y la enseñanza. Nos encanta compartir nuestros conocimientos y habilidades con otros y ayudarles a aprender a programar. <br><br>
 
@@ -56,6 +56,6 @@ Nos encanta enseñar programación y ver cómo los estudiantes se sienten cada v
       <div class="mt-8 text-center">
         <Link href="/contact" style="primary">Contáctanos</Link>
       </div>
-    </div>
+    </div> -->
   </Container>
 </Layout>
