--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,7 @@ import Pagetitle from "@components/pagetitle.astro";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contáctanos</h2>
+        <h2 class="font-medium text-2xl text-white-800">Contáctanos</h2>
         <p class="text-lg leading-relaxed text-gray-500 mt-3">
           ¿Necesitas ayuda? Estamos aquí para ayudarte.
           Llena el formulario, envíanos un correo electrónico o escríbenos en el chat.
