--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,17 +31,15 @@ const makeTitle = title
     <meta name="generator" content={Astro.generator} />
 
     <!-- código de seguimiento de Google Analytics -->
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1PC4KSZR54"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTVY2T9WZ2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-1PC4KSZR54');
-</script>
-
-<!-- Fin del código de seguimiento de Google Analytics  -->
+      gtag('config', 'G-YTVY2T9WZ2');
+    </script>
+    <!-- Fin del código de seguimiento de Google Analytics  -->
 
     <SEO
       title={makeTitle}
