Corrección de about ok

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,7 +36,7 @@ import Link from "@components/ui/link.astro";
         
         Por último, mi motivación para escribir este blog es ayudar a las personas a alcanzar sus metas en el mundo de la porgramación. A través de este blog, espero brindar a los futuros programadores las herramientas y el conocimiento que necesitan para crear sitios y aplicaciones web útiles y atractivas. ¡La tecnología cambia constantemente, y aprender a desarrollar software es una habilidad valiosa que puede ayudar a las personas a alcanzar su potencial máximo! &#128640;<br><br>
 
-        Únete a mi en este viaje hacia una carrera exitosa y satisfactoria en la programación. ¡Estoy emocionados de ver tu crecimiento y logros!
+        Únete a mi en este viaje hacia una carrera exitosa y satisfactoria en la programación. ¡Estoy emocionado de ver tu crecimiento y logros!
       </p><br>
       <blockquote>
         "La programación te enseña a pensar"
