--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ import Link from "@components/ui/link.astro";
 
     <div class="mx-auto max-w-4xl mt-1 py-5">
       <Image
-        src="src/assets/authors/carlos.jpg"
+        src="https://res.cloudinary.com/do66lfayc/image/upload/v1681313096/BlogUsp/carlos_mhhpnc.jpg"
         format="avif"
         width={300}
         height={300}
